--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/views/user.html
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/views/user.html
@@ -1,4 +1,5 @@
-{% raw %}{% extends "base.html" %}
+{% raw %}
+{% extends "base.html" %}
 
 {% block title %}Users{% endblock %}
 
@@ -6,11 +7,23 @@
 <strong>Users</strong>
 <ul>
 	{% for user in users %}
-	<li><a href="/user/{{ user.name }}">{{ user.name }}</a></li>
+    	<li>
+            <a href="/user/{{ user.name }}">{{ user.name }}</a>
+        </li>
 	{% else %}
-	<li><em>Entity not found.</em></li>
+    	<li><em>Entity not found.</em></li>
 	{% endfor %}
 </ul>
 
-<a href="/user/add">Add</a>
-{% endblock %}{% endraw %}
+<form action="/user/add" method='POST'>
+
+    {% for field in userform %}
+        <dl>{{field.label}} {{field}}</dl>
+    {% endfor %}
+
+    <button type="submit">Save</button>
+</form>
+
+
+{% endblock %}
+{% endraw %}
